# Grocery

./: .gitignore  CMakeLists.txt  README.md
protos/: CMakeLists.txt  grocery.proto  inventory.proto
src/: .main.cpp.swp  CMakeLists.txt  main.cpp  writer.cpp  writer.hpp
